# django-online-issues

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: docs.yml  release.yml  test.yml
docs/src/: advanced_configuration.md  backends.md  configuration.md  custom_backends.md  index.md  installation.md  testing.md  usage.md
docs/src/backends/: azure_devops.md  console.md  debug.md  email.md  github.md  github_repo.md  gitlab.md  index.md  taiga.md
src/issues/: apps.py  checks.py  config.py  exceptions.py  forms.py  types.py  types.pyi  urls.py  utils.py  views.py
src/issues/backends/: __init__.py  _base.py  azure_devops.py  console.py  debug.py  email.py  github.py  github_repo.py  gitlab.py  taiga.py
src/issues/static/issues/: axios.min.js  dom-to-image.min.js  html2canvas-pro.js  html2canvas-pro.min.js  html2canvas.min.js  issues.css  issues.css.map  issues.js  issues.min.js  issues.scss  rasterizeHTML.min.js
src/issues/templates/issues/: issue_form.html
src/issues/templatetags/: issues.py
tests/: .coveragerc  conftest.py  test_config.py  test_form.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py
tests/_demoapp/: manage.py
tests/_demoapp/demo/: settings.py  urls.py
tests/_demoapp/demo/templates/: sample_page.html
tests/_demoapp/demo/templates/admin/: base.html  base_site.html
tests/_extras/testutils/: selenium.py
tests/_extras/testutils/factories/: __init__.py  user.py
tests/backends/: test_azure_devops.py  test_base.py  test_console.py  test_debug.py  test_email.py  test_github.py  test_github_repo.py  test_gitlab.py  test_taiga.py  test_taiga.py.txt
tests/selenium/: conftest.py  test_f_crawl.py
